ops/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.5.2
          args:
            - start-dev
            - --import-realm
            - --hostname-strict=false
            - --proxy-headers=xforwarded
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /realms/master
              port: http
            initialDelaySeconds: 50
            periodSeconds: 10
            failureThreshold: 20
          livenessProbe:
            httpGet:
              path: /realms/master
              port: http
            initialDelaySeconds: 400
            periodSeconds: 20
          volumeMounts:
            - name: realm-import
              mountPath: /opt/keycloak/data/import
              readOnly: true
      volumes:
        - name: realm-import
          configMap:
            name: keycloak-realm-import
